# SilaDemo

./: .gitignore  demo_client.py  main.py  pyproject.toml
silademo/: server.py
silademo/feature_implementations/: greetingprovider_impl.py  sartoriusscalecontroller_impl.py
