[project]
name = "silademo"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sartorius>=0.6.0",
    "sila2>=0.6.0",
    "sila2[codegen, cryptography]",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["silademo*"]

[tool.setuptools.package-data]
"silademo.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
